--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "null-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "webpack": "^4.43.0"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.0",
